After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724124 - glib/tests/collate.c fails if no en_US locale
glib/tests/collate.c fails if no en_US locale
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: general
2.39.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-02-11 15:27 UTC by Simon McVittie
Modified: 2014-02-13 14:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
glib/tests/collate.c: run to completion when skipping all tests (1.53 KB, patch)
2014-02-11 15:27 UTC, Simon McVittie
committed Details | Review
g_test_run: return 0 if all tests are skipped in TAP mode (1.43 KB, patch)
2014-02-11 15:28 UTC, Simon McVittie
accepted-commit_now Details | Review

Description Simon McVittie 2014-02-11 15:27:20 UTC
Now that the tests produce TAP output, exiting 0 without printing any TAP directives is an error:

        ERROR: collate - missing test plan

The TAP specification says the test should at least print "1..0".
Comment 1 Simon McVittie 2014-02-11 15:27:53 UTC
Created attachment 268799 [details] [review]
glib/tests/collate.c: run to completion when skipping all  tests

Otherwise, we don't produce valid TAP output, and fail with:

    ERROR: collate - missing test plan
Comment 2 Simon McVittie 2014-02-11 15:28:13 UTC
Created attachment 268800 [details] [review]
g_test_run: return 0 if all tests are skipped in TAP mode

Exit status 77 is special to Automake's default test driver, but is
treated as an error by TAP.
Comment 3 Simon McVittie 2014-02-13 14:37:02 UTC
Comment on attachment 268799 [details] [review]
glib/tests/collate.c: run to completion when skipping all  tests

Committed as ffa5fab09, should be in 2.39.5, thanks to danw for review
Comment 4 Simon McVittie 2014-02-13 14:39:04 UTC
Comment on attachment 268800 [details] [review]
g_test_run: return 0 if all tests are skipped in TAP mode

Committed as 0f5577de5, should be in 2.39.5, thanks to danw for review